--- a/index.html
+++ b/index.html
@@ -7,16 +7,11 @@
   <body>
     <nav class="navbar">
       <div class="navbar-center">
-        <span class="nav-icon">
-          <i class="fas fa-bars"></i>
-        </span>
-        <h2 class="navbar-center__title">LOGO<span>COMPANY</span> </h2>
-        <div class="cart-btn" onclick="showCart()">
-          <span class="nav-icon">
-            <i class="fas fa-cart-plus"></i>
-          </span>
-          <div class="cart-items">0</div>
-        </div>
+        <ul>
+          <li><a href="">About</a></li>
+          <li><a href="">Contact</a></li>
+          <li><a href="">Projects</a></li>
+        </ul>
       </div>
     </nav>
   </body>
