added hero and banner

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Miguel alonso</title>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <nav class="navbar">
@@ -14,5 +15,11 @@
         </ul>
       </div>
     </nav>
+    <section class="hero">
+      <div class="banner">
+        <img src="https://images.pexels.com/photos/17668/pexels-photo.jpg?auto=compress&cs=tinysrgb&h=750&w=1260" alt="">
+      </div>
+      
+    </section>
   </body>
 </html>
