--- a/index.html
+++ b/index.html
@@ -17,9 +17,20 @@
     </nav>
     <section class="hero">
       <div class="banner">
-        <img src="https://images.pexels.com/photos/17668/pexels-photo.jpg?auto=compress&cs=tinysrgb&h=750&w=1260" alt="">
+        <img src="https://images.pexels.com/photos/1201624/pexels-photo-1201624.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="">
+        <div class="banner__overlay">
+          <div>
+            <h1>MIGUEL <span>ALONSO</span></h1>
+            <h3>Numbero telefono</h3>
+            <ul>
+              <li><a href="">Facebook</a></li>
+              <li><a href="">Twitter</a></li>
+              <li><a href="">Linkedin</a></li>
+            </ul>
+          </div>
+        </div>
       </div>
-      
+
     </section>
   </body>
 </html>
