--- a/index.html
+++ b/index.html
@@ -3,15 +3,19 @@
   <head>
     <meta charset="utf-8">
     <title>Miguel alonso</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   </head>
   <body>
     <nav class="navbar">
       <div class="navbar-center">
-        <ul>
-          <li><a href="">About</a></li>
-          <li><a href="">Contact</a></li>
-          <li><a href="">Projects</a></li>
+        <div class="navbar-hamburguer">
+
+        </div>
+        <ul class="navbar-list">
+          <li><a href="" class="navbar-list__link">About</a></li>
+          <li><a href="" class="navbar-list__link">Contact</a></li>
+          <li><a href="" class="navbar-list__link">Projects</a></li>
         </ul>
       </div>
     </nav>
@@ -21,11 +25,11 @@
         <div class="banner__overlay">
           <div>
             <h1>MIGUEL <span>ALONSO</span></h1>
-            <h3>Numbero telefono</h3>
+            <h4><a href="">malbonm07@gmail.com</a></h4>
             <ul>
-              <li><a href="">Facebook</a></li>
-              <li><a href="">Twitter</a></li>
-              <li><a href="">Linkedin</a></li>
+              <li><a href=""><i class="fab fa-facebook-f"></i></a></li>
+              <li><a href=""><i class="fab fa-twitter"></i></a></li>
+              <li><a href=""><i class="fab fa-linkedin-in"></i></a></li>
             </ul>
           </div>
         </div>
