added social and title to banner

--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   </head>
   <body>
+
+    <!-- ################### NAVBAR ################### -->
     <nav class="navbar">
       <div class="navbar-center">
         <div class="navbar-hamburguer">
-
+          <h6>Malbonm</h6>
         </div>
         <ul class="navbar-list">
           <li><a href="" class="navbar-list__link">About</a></li>
@@ -19,22 +21,23 @@
         </ul>
       </div>
     </nav>
+    <!-- ################### END NAVBAR ################### -->
+
+    <!-- ################### HERO ################### -->
     <section class="hero">
-      <div class="banner">
-        <img src="https://images.pexels.com/photos/1201624/pexels-photo-1201624.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="">
-        <div class="banner__overlay">
-          <div>
-            <h1>MIGUEL <span>ALONSO</span></h1>
-            <h4><a href="">malbonm07@gmail.com</a></h4>
-            <ul>
-              <li><a href=""><i class="fab fa-facebook-f"></i></a></li>
-              <li><a href=""><i class="fab fa-twitter"></i></a></li>
-              <li><a href=""><i class="fab fa-linkedin-in"></i></a></li>
+      <div class="banner-overlay">
+        <div class="banner-content">
+            <h1 class="banner-content__title">MIGUEL <span>ALONSO</span></h1>
+            <h4><a href="" class="banner-content__email" >malbonm07@gmail.com</a></h4>
+            <ul class="banner-content-list">
+              <li><a href="" class="banner-content-list__link"><i class="fab fa-facebook-f"></i></a></li>
+              <li><a href="" class="banner-content-list__link"><i class="fab fa-twitter"></i></a></li>
+              <li><a href="" class="banner-content-list__link"><i class="fab fa-linkedin-in"></i></a></li>
             </ul>
-          </div>
         </div>
       </div>
-
     </section>
+
+    <!-- ################### END HERO ################### -->
   </body>
 </html>
