added link effects

--- a/index.html
+++ b/index.html
@@ -29,11 +29,16 @@
         <div class="banner-content">
             <h1 class="banner-content__title">MIGUEL <span>ALONSO</span></h1>
             <h4><a href="" class="banner-content__email" >malbonm07@gmail.com</a></h4>
-            <ul class="banner-content-list">
-              <li><a href="" class="banner-content-list__link"><i class="fab fa-facebook-f"></i></a></li>
-              <li><a href="" class="banner-content-list__link"><i class="fab fa-twitter"></i></a></li>
-              <li><a href="" class="banner-content-list__link"><i class="fab fa-linkedin-in"></i></a></li>
-            </ul>
+            <div class="social-content">
+              <ul class="banner-content-list">
+                <li><a href="#" class="banner-content-list__link"><i class="fab fa-facebook-f"></i></a></li>
+                <li><a href="#" class="banner-content-list__link"><i class="fab fa-twitter"></i></a></li>
+                <li><a href="#" class="banner-content-list__link"><i class="fab fa-linkedin-in"></i></a></li>
+              </ul>
+            </div>
+        </div>
+        <div class="year">
+          <h6><small>2019</small></h6>
         </div>
       </div>
     </section>
