added more effects

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <section class="hero">
       <div class="banner-overlay">
         <div class="banner-content">
+          <div class="banner-effect">
             <h1 class="banner-content__title">MIGUEL <span>ALONSO</span></h1>
             <h4><a href="" class="banner-content__email" >malbonm07@gmail.com</a></h4>
             <div class="social-content">
@@ -36,6 +37,7 @@
                 <li><a href="#" class="banner-content-list__link"><i class="fab fa-linkedin-in"></i></a></li>
               </ul>
             </div>
+          </div>
         </div>
         <div class="year">
           <h6><small>2019</small></h6>
