added effects to navbar

--- a/index.html
+++ b/index.html
@@ -10,15 +10,17 @@
 
     <!-- ################### NAVBAR ################### -->
     <nav class="navbar">
-      <div class="navbar-center">
-        <div class="navbar-hamburguer">
-          <h6>Malbonm</h6>
+      <div class="navbar-content-effect">
+        <div class="navbar-center">
+          <div class="navbar-hamburguer">
+            <h6>Malbonm</h6>
+          </div>
+          <ul class="navbar-list">
+            <li><a href="" class="navbar-list__link">About</a></li>
+            <li><a href="" class="navbar-list__link">Contact</a></li>
+            <li><a href="" class="navbar-list__link">Projects</a></li>
+          </ul>
         </div>
-        <ul class="navbar-list">
-          <li><a href="" class="navbar-list__link">About</a></li>
-          <li><a href="" class="navbar-list__link">Contact</a></li>
-          <li><a href="" class="navbar-list__link">Projects</a></li>
-        </ul>
       </div>
     </nav>
     <!-- ################### END NAVBAR ################### -->
@@ -32,9 +34,9 @@
             <h4><a href="" class="banner-content__email" >malbonm07@gmail.com</a></h4>
             <div class="social-content">
               <ul class="banner-content-list">
-                <li><a href="#" class="banner-content-list__link"><i class="fab fa-facebook-f"></i></a></li>
-                <li><a href="#" class="banner-content-list__link"><i class="fab fa-twitter"></i></a></li>
-                <li><a href="#" class="banner-content-list__link"><i class="fab fa-linkedin-in"></i></a></li>
+                <li><a href="https://www.facebook.com/malbonm07" target="_blank" class="banner-content-list__link"><i class="fab fa-facebook-f"></i></a></li>
+                <li><a href="https://twitter.com/malbonm07" target="_blank" class="banner-content-list__link"><i class="fab fa-twitter"></i></a></li>
+                <li><a href="https://www.linkedin.com/in/malbonm07" target="_blank" class="banner-content-list__link"><i class="fab fa-linkedin-in"></i></a></li>
               </ul>
             </div>
           </div>
@@ -46,5 +48,18 @@
     </section>
 
     <!-- ################### END HERO ################### -->
+
+    <!-- ################### SKILLS ################### -->
+
+    <section class="skills">
+      <div class="skills-title">
+
+      </div>
+      <div class="skills-center">
+        
+      </div>
+    </section>
+
+    <!-- ################### END SKILLS ################### -->
   </body>
 </html>
