--- a/index.html
+++ b/index.html
@@ -51,13 +51,30 @@
 
     <!-- ################### SKILLS ################### -->
 
-    <section class="skills">
+    <section class="skills-section">
       <div class="skills-title">
-
+        <h2>SKILLS</h2>
       </div>
+      <h3>PROGRAMING LENGUAGES AND TOOLS</h3>
       <div class="skills-center">
-        
+        <ul class="skills-list">
+          <li><span><i class="fab fa-html5"></i></span></li>
+          <li><span><i class="fab fa-css3-alt"></i></span></li>
+          <li><span><i class="fab fa-js-square"></i></span></li>
+          <li><span><i class="fab fa-vuejs"></i></span></li>
+          <li><span><i class="fab fa-bootstrap"></i></span></li>
+          <li><span><i class="fab fa-sass"></i></span></li>
+          <li><span><i class="fas fa-th"></i></span></li>
+          <li><span><i class="fab fa-npm"></i></span></li>
+          <li><span><i class="fab fa-github"></i></span></li>
+        </ul>
       </div>
+      <h3>WORKFLOW</h3>
+      <ul class="workflow-list">
+        <li>Mobile-First, Responsive Design Focus</li>
+        <li>Cross Functional Teams (Creative to Development)</li>
+        <li>Agile Development Approach</li>
+      </ul>
     </section>
 
     <!-- ################### END SKILLS ################### -->
