added portfolio and images

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Miguel alonso</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
@@ -13,7 +14,7 @@
       <div class="navbar-content-effect">
         <div class="navbar-center">
           <div class="navbar-hamburguer">
-            <h6>Malbonm</h6>
+            <a>Malbonm</a>
           </div>
           <ul class="navbar-list">
             <li><a href="" class="navbar-list__link">About</a></li>
@@ -42,7 +43,7 @@
           </div>
         </div>
         <div class="year">
-          <h6><small>2019</small></h6>
+          <h5><small>2019</small></h5>
         </div>
       </div>
     </section>
@@ -78,5 +79,89 @@
     </section>
 
     <!-- ################### END SKILLS ################### -->
+
+    <!-- ################### PORTFOLIO ################### -->
+
+    <section class="projects">
+      <div class="projects-title">
+        <h2>PROJECTS</h2>
+      </div>
+      <div class="projects-center">
+
+    <!-- ################### project ################### -->
+
+        <article class="project">
+          <div class="project-img-container">
+            <a href="https://codesandbox.io/embed/7k81vw6pq0?fontsize=14" target="_blank">
+              <img src="img/vue-music-app.png" alt="" class="project-img">
+            <div class="project-img-overlay">Vue-Music App</div>
+            </a>
+          </div>
+          <div class="project-description-overlay">
+            <h4>Skills :</h4>
+            <ul>
+              <li>Vue.js</li>
+              <li>Vue-router</li>
+              <li>Bootstrap</li>
+              <li>Javascript linting: Eslint</li>
+              <li>Axios library, request ajax.</li>
+              <li>Event-bus (plugin)</li>
+            </ul>
+          </div>
+        </article>
+
+
+    <!-- ################### end project ################### -->
+
+    <!-- ################### project ################### -->
+
+        <article class="project">
+          <div class="project-img-container">
+            <a href="https://codesandbox.io/embed/4051wopon9?fontsize=14" target="_blank">
+              <img src="img/todo-list-vue.png" alt="" class="project-img">
+              <div class="project-img-overlay">Todo List</div>
+            </a>
+          </div>
+          <h4>Skills :</h4>
+          <ul>
+            <li>Vue.js</li>
+            <li>Props, directives, methods</li>
+            <li>Watch, computed properties</li>
+            <li>Event handling, Conditional</li>
+            <li>Components</li>
+          </ul>
+        </article>
+
+
+    <!-- ################### end project ################### -->
+
+    <!-- ################### project ################### -->
+
+        <article class="project">
+          <div class="project-img-container">
+            <a href="https://malbonm07.github.io/landing-page/" target="_blank">
+              <img src="img/landing-page.png" alt="" class="project-img">
+              <div class="project-img-overlay">Freecodecamp Landing Page</div>
+            </a>
+          </div>
+          <h4>Skills :</h4>
+          <ul>
+            <li>Html5</li>
+            <li>CSS, CSS grid, Flexbox</li>
+            <li>Sass</li>
+            <li>CSS arquitecture BEM</li>
+            <li>Mobie first, responsive design</li>
+            <li>Javascript DOM</li>
+          </ul>
+        </article>
+      </div>
+
+    <!-- ################### end project ################### -->
+
+    </section>
+    
+
+
+    <!-- ################### PORTFOLIO ################### -->
   </body>
 </html>
