added popover to skils

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="navbar-content-effect">
         <div class="navbar-center">
           <div class="navbar-hamburguer">
-            <a>Malbonm</a>
+            <a class="navbar-hamburguer__logo">Malbonm</a>
           </div>
           <ul class="navbar-list">
             <li><a href="" class="navbar-list__link">About</a></li>
@@ -59,15 +59,15 @@
       <h3>PROGRAMING LENGUAGES AND TOOLS</h3>
       <div class="skills-center">
         <ul class="skills-list">
-          <li><span><i class="fab fa-html5"></i></span></li>
-          <li><span><i class="fab fa-css3-alt"></i></span></li>
-          <li><span><i class="fab fa-js-square"></i></span></li>
-          <li><span><i class="fab fa-vuejs"></i></span></li>
-          <li><span><i class="fab fa-bootstrap"></i></span></li>
-          <li><span><i class="fab fa-sass"></i></span></li>
-          <li><span><i class="fas fa-th"></i></span></li>
-          <li><span><i class="fab fa-npm"></i></span></li>
-          <li><span><i class="fab fa-github"></i></span></li>
+          <li><span><i class="fab fa-html5"><span class="skill-item__popover">Html5</span></i></span></li>
+          <li><span><i class="fab fa-css3-alt"><span class="skill-item__popover">Css</span></i></span></li>
+          <li><span><i class="fab fa-js-square"><span class="skill-item__popover">Javascript</span></i></span></li>
+          <li><span><i class="fab fa-vuejs"><span class="skill-item__popover">Vue</span></i></span></li>
+          <li><span><i class="fab fa-bootstrap"><span class="skill-item__popover">Bootstrap</span></i></span></li>
+          <li><span><i class="fab fa-sass"><span class="skill-item__popover">Sass</span></i></span></li>
+          <li><span><i class="fas fa-th"><span class="skill-item__popover">Grid</span></i></span></li>
+          <li><span><i class="fab fa-npm"><span class="skill-item__popover">Npm</span></i></span></li>
+          <li><span><i class="fab fa-github"><span class="skill-item__popover">Github</span></i></span></li>
         </ul>
       </div>
       <h3>WORKFLOW</h3>
@@ -159,7 +159,7 @@
     <!-- ################### end project ################### -->
 
     </section>
-    
+
 
 
     <!-- ################### PORTFOLIO ################### -->
