added scroll effect to skills section

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       </div>
       <h3>PROGRAMING LENGUAGES AND TOOLS</h3>
       <div class="skills-center">
-        <ul class="skills-list">
+        <ul id="skills-list-effect" class="skills-list">
           <li><span><i class="fab fa-html5"><span class="skill-item__popover">Html5</span></i></span></li>
           <li><span><i class="fab fa-css3-alt"><span class="skill-item__popover">Css</span></i></span></li>
           <li><span><i class="fab fa-js-square"><span class="skill-item__popover">Javascript</span></i></span></li>
@@ -163,5 +163,6 @@
 
 
     <!-- ################### PORTFOLIO ################### -->
+  <script type="text/javascript" src="app.js"></script>
   </body>
 </html>
