adding footer-section

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <a class="navbar-hamburguer__logo">Malbonm</a>
           </div>
           <ul class="navbar-list">
-            <li><a href="" class="navbar-list__link">About</a></li>
+            <li><a href="" class="navbar-list__link">About me</a></li>
             <li><a href="" class="navbar-list__link">Contact</a></li>
             <li><a href="" class="navbar-list__link">Projects</a></li>
           </ul>
@@ -26,143 +26,176 @@
     </nav>
     <!-- ################### END NAVBAR ################### -->
 
-    <!-- ################### HERO ################### -->
-    <section class="hero">
-      <div class="banner-overlay">
-        <div class="banner-content">
-          <div class="banner-effect">
-            <h1 class="banner-content__title">MIGUEL <span>ALONSO</span></h1>
-            <h4><a href="" class="banner-content__email" >malbonm07@gmail.com</a></h4>
-            <div class="social-content">
-              <ul class="banner-content-list">
-                <li><a href="https://www.facebook.com/malbonm07" target="_blank" class="banner-content-list__link"><i class="fab fa-facebook-f"></i></a></li>
-                <li><a href="https://twitter.com/malbonm07" target="_blank" class="banner-content-list__link"><i class="fab fa-twitter"></i></a></li>
-                <li><a href="https://www.linkedin.com/in/malbonm07" target="_blank" class="banner-content-list__link"><i class="fab fa-linkedin-in"></i></a></li>
+    <!-- ################### SIDE-BAR ################### -->
+
+    <div class="side-bar">
+      <ul>
+        <li><a class="side-bar__link">EXPERIENCE</a></li>
+        <li><a class="side-bar__link">EDUCATION</a></li>
+        <li><a class="side-bar__link">INTERESTS</a></li>
+        <li><a class="side-bar__link">SOCIAL MEDIA</a></li>
+      </ul>
+    </div>
+
+    <!-- ################### END SIDE-BAR ################### -->
+
+    <div class="main-container">
+
+          <!-- ################### HERO ################### -->
+          <section class="hero">
+            <div class="banner-overlay">
+              <div class="banner-content">
+                <div class="banner-effect">
+                  <h1 class="banner-content__title">MIGUEL <span>ALONSO</span></h1>
+                  <h4><a href="" class="banner-content__email" >malbonm07@gmail.com</a></h4>
+                  <div class="social-content">
+                    <ul class="banner-content-list">
+                      <li><a href="https://www.facebook.com/malbonm07" target="_blank" class="banner-content-list__link"><i class="fab fa-facebook-f"></i></a></li>
+                      <li><a href="https://twitter.com/malbonm07" target="_blank" class="banner-content-list__link"><i class="fab fa-twitter"></i></a></li>
+                      <li><a href="https://www.linkedin.com/in/malbonm07" target="_blank" class="banner-content-list__link"><i class="fab fa-linkedin-in"></i></a></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+              <div class="year">
+                <h5><small>2019</small></h5>
+              </div>
+            </div>
+          </section>
+
+          <!-- ################### END HERO ################### -->
+
+          <!-- ################### SKILLS ################### -->
+
+          <section class="skills-section">
+            <div class="skills-title">
+              <h2>SKILLS</h2>
+            </div>
+            <h3>PROGRAMING LENGUAGES AND TOOLS</h3>
+            <div class="skills-center">
+              <ul id="skills-list-effect" class="skills-list">
+                <li><span><i class="fab fa-html5"><span class="skill-item__popover">Html5</span></i></span></li>
+                <li><span><i class="fab fa-css3-alt"><span class="skill-item__popover">Css</span></i></span></li>
+                <li><span><i class="fab fa-js-square"><span class="skill-item__popover">Javascript</span></i></span></li>
+                <li><span><i class="fab fa-vuejs"><span class="skill-item__popover">Vue</span></i></span></li>
+                <li><span><i class="fab fa-bootstrap"><span class="skill-item__popover">Bootstrap</span></i></span></li>
+                <li><span><i class="fab fa-sass"><span class="skill-item__popover">Sass</span></i></span></li>
+                <li><span><i class="fas fa-th"><span class="skill-item__popover">Grid</span></i></span></li>
+                <li><span><i class="fab fa-npm"><span class="skill-item__popover">Npm</span></i></span></li>
+                <li><span><i class="fab fa-github"><span class="skill-item__popover">Github</span></i></span></li>
               </ul>
             </div>
-          </div>
-        </div>
-        <div class="year">
-          <h5><small>2019</small></h5>
-        </div>
-      </div>
-    </section>
-
-    <!-- ################### END HERO ################### -->
-
-    <!-- ################### SKILLS ################### -->
-
-    <section class="skills-section">
-      <div class="skills-title">
-        <h2>SKILLS</h2>
-      </div>
-      <h3>PROGRAMING LENGUAGES AND TOOLS</h3>
-      <div class="skills-center">
-        <ul id="skills-list-effect" class="skills-list">
-          <li><span><i class="fab fa-html5"><span class="skill-item__popover">Html5</span></i></span></li>
-          <li><span><i class="fab fa-css3-alt"><span class="skill-item__popover">Css</span></i></span></li>
-          <li><span><i class="fab fa-js-square"><span class="skill-item__popover">Javascript</span></i></span></li>
-          <li><span><i class="fab fa-vuejs"><span class="skill-item__popover">Vue</span></i></span></li>
-          <li><span><i class="fab fa-bootstrap"><span class="skill-item__popover">Bootstrap</span></i></span></li>
-          <li><span><i class="fab fa-sass"><span class="skill-item__popover">Sass</span></i></span></li>
-          <li><span><i class="fas fa-th"><span class="skill-item__popover">Grid</span></i></span></li>
-          <li><span><i class="fab fa-npm"><span class="skill-item__popover">Npm</span></i></span></li>
-          <li><span><i class="fab fa-github"><span class="skill-item__popover">Github</span></i></span></li>
-        </ul>
-      </div>
-      <h3>WORKFLOW</h3>
-      <ul class="workflow-list">
-        <li>Mobile-First, Responsive Design Focus</li>
-        <li>Cross Functional Teams (Creative to Development)</li>
-        <li>Agile Development Approach</li>
-      </ul>
-    </section>
-
-    <!-- ################### END SKILLS ################### -->
-
-    <!-- ################### PORTFOLIO ################### -->
-
-    <section class="projects">
-      <div class="projects-title">
-        <h2>PROJECTS</h2>
-      </div>
-      <div class="projects-center">
-
-    <!-- ################### project ################### -->
-
-        <article class="project">
-          <div class="project-img-container">
-            <a href="https://codesandbox.io/embed/7k81vw6pq0?fontsize=14" target="_blank">
-              <img src="img/vue-music-app.png" alt="" class="project-img">
-            <div class="project-img-overlay">Vue-Music App</div>
-            </a>
-          </div>
-          <div class="project-description-overlay">
-            <h4>Skills :</h4>
-            <ul>
-              <li>Vue.js</li>
-              <li>Vue-router</li>
-              <li>Bootstrap</li>
-              <li>Javascript linting: Eslint</li>
-              <li>Axios library, request ajax.</li>
-              <li>Event-bus (plugin)</li>
+            <h3>WORKFLOW</h3>
+            <ul class="workflow-list">
+              <li>Mobile-First, Responsive Design Focus</li>
+              <li>Cross Functional Teams (Creative to Development)</li>
+              <li>Agile Development Approach</li>
             </ul>
-          </div>
-        </article>
+          </section>
+
+          <!-- ################### END SKILLS ################### -->
+
+          <!-- ################### PORTFOLIO ################### -->
+
+          <section class="projects">
+            <div class="projects-title">
+              <h2>PROJECTS</h2>
+            </div>
+            <div class="projects-center">
+
+          <!-- ################### project ################### -->
+
+              <article class="project">
+                <div class="project-img-container">
+                  <a href="https://codesandbox.io/embed/7k81vw6pq0?fontsize=14" target="_blank">
+                    <img src="img/vue-music-app.png" alt="" class="project-img">
+                  <div class="project-img-overlay">Vue-Music App</div>
+                  </a>
+                </div>
+                <div class="project-description-overlay">
+                  <h4>Skills :</h4>
+                  <ul>
+                    <li>Vue.js</li>
+                    <li>Vue-router</li>
+                    <li>Bootstrap</li>
+                    <li>Javascript linting: Eslint</li>
+                    <li>Axios library, request ajax.</li>
+                    <li>Event-bus (plugin)</li>
+                  </ul>
+                </div>
+              </article>
 
 
-    <!-- ################### end project ################### -->
+          <!-- ################### end project ################### -->
 
-    <!-- ################### project ################### -->
+          <!-- ################### project ################### -->
 
-        <article class="project">
-          <div class="project-img-container">
-            <a href="https://codesandbox.io/embed/4051wopon9?fontsize=14" target="_blank">
-              <img src="img/todo-list-vue.png" alt="" class="project-img">
-              <div class="project-img-overlay">Todo List</div>
-            </a>
-          </div>
-          <h4>Skills :</h4>
-          <ul>
-            <li>Vue.js</li>
-            <li>Props, directives, methods</li>
-            <li>Watch, computed properties</li>
-            <li>Event handling, Conditional</li>
-            <li>Components</li>
-          </ul>
-        </article>
-
-
-    <!-- ################### end project ################### -->
-
-    <!-- ################### project ################### -->
-
-        <article class="project">
-          <div class="project-img-container">
-            <a href="https://malbonm07.github.io/landing-page/" target="_blank">
-              <img src="img/landing-page.png" alt="" class="project-img">
-              <div class="project-img-overlay">Freecodecamp Landing Page</div>
-            </a>
-          </div>
-          <h4>Skills :</h4>
-          <ul>
-            <li>Html5</li>
-            <li>CSS, CSS grid, Flexbox</li>
-            <li>Sass</li>
-            <li>CSS arquitecture BEM</li>
-            <li>Mobie first, responsive design</li>
-            <li>Javascript DOM</li>
-          </ul>
-        </article>
-      </div>
-
-    <!-- ################### end project ################### -->
-
-    </section>
+              <article class="project">
+                <div class="project-img-container">
+                  <a href="https://codesandbox.io/embed/4051wopon9?fontsize=14" target="_blank">
+                    <img src="img/todo-list-vue.png" alt="" class="project-img">
+                    <div class="project-img-overlay">Todo List</div>
+                  </a>
+                </div>
+                <h4>Skills :</h4>
+                <ul>
+                  <li>Vue.js</li>
+                  <li>Props, directives, methods</li>
+                  <li>Watch, computed properties</li>
+                  <li>Event handling, Conditional</li>
+                  <li>Components</li>
+                </ul>
+              </article>
 
 
+          <!-- ################### end project ################### -->
 
-    <!-- ################### PORTFOLIO ################### -->
+          <!-- ################### project ################### -->
+
+              <article class="project">
+                <div class="project-img-container">
+                  <a href="https://malbonm07.github.io/landing-page/" target="_blank">
+                    <img src="img/landing-page.png" alt="" class="project-img">
+                    <div class="project-img-overlay">Freecodecamp Landing Page</div>
+                  </a>
+                </div>
+                <h4>Skills :</h4>
+                <ul>
+                  <li>Html5</li>
+                  <li>CSS, CSS grid, Flexbox</li>
+                  <li>Sass</li>
+                  <li>CSS arquitecture BEM</li>
+                  <li>Mobie first, responsive design</li>
+                  <li>Javascript DOM</li>
+                </ul>
+              </article>
+            </div>
+
+          <!-- ################### end project ################### -->
+
+          <!-- ################### PORTFOLIO ################### -->
+          </section>
+
+          <!-- ################### FOOTER ################### -->
+
+          <section class="footer">
+            <div class="footer-social">
+              <ul class="footer-social-list">
+                <li><a href="https://www.facebook.com/malbonm07" target="_blank" class="footer-social-list__link"><i class="fab fa-facebook-f"></i></a></li>
+                <li><a href="https://twitter.com/malbonm07" target="_blank" class="footer-social-list__link"><i class="fab fa-twitter"></i></a></li>
+                <li><a href="https://www.linkedin.com/in/malbonm07" target="_blank" class="footer-social-list__link"><i class="fab fa-linkedin-in"></i></a></li>
+                <li><a href="https://github.com/malbonm07" target="_blank" class="footer-social-list__link"><i class="fab fa-github"></i></a></li>
+                <li><a href="https://codepen.io/Malbonm07" target="_blank" class="footer-social-list__link"><i class="fab fa-codepen"></i></a></li>
+              </ul>
+            </div>
+            <div class="footer-description">
+              hola mundo
+            </div>
+          </section>
+
+          <!-- ################### END FOOTER ################### -->
+    </div>
+
   <script type="text/javascript" src="app.js"></script>
   </body>
 </html>
