added side-img-contact and footer

--- a/index.html
+++ b/index.html
@@ -16,9 +16,16 @@
           <div class="navbar-hamburguer">
             <a class="navbar-hamburguer__logo">Malbonm</a>
           </div>
+          <div class="buttonHome-box">
+            <a href="#">
+              <div class="buttonHome">
+                <div class="buttonHome-shadow"></div>
+              </div>
+            </a>
+          </div>
           <ul class="navbar-list">
             <li><a href="" class="navbar-list__link">About me</a></li>
-            <li><a href="" class="navbar-list__link">Contact</a></li>
+            <li><a href="#contact" class="navbar-list__link">Contact</a></li>
             <li><a href="" class="navbar-list__link">Projects</a></li>
           </ul>
         </div>
@@ -29,6 +36,9 @@
     <!-- ################### SIDE-BAR ################### -->
 
     <div class="side-bar">
+      <div class="side-img-box">
+        <img src="img/miguel.png" alt="" class="side-img-contact">
+      </div>
       <ul>
         <li><a class="side-bar__link">EXPERIENCE</a></li>
         <li><a class="side-bar__link">EDUCATION</a></li>
@@ -179,7 +189,8 @@
           <!-- ################### FOOTER ################### -->
 
           <section class="footer">
-            <div class="footer-social">
+            <h6>Social Media</h6>
+            <div class="footer-social" id="contact">
               <ul class="footer-social-list">
                 <li><a href="https://www.facebook.com/malbonm07" target="_blank" class="footer-social-list__link"><i class="fab fa-facebook-f"></i></a></li>
                 <li><a href="https://twitter.com/malbonm07" target="_blank" class="footer-social-list__link"><i class="fab fa-twitter"></i></a></li>
@@ -189,7 +200,14 @@
               </ul>
             </div>
             <div class="footer-description">
-              hola mundo
+              <h6>Personal Projects</h6>
+              <div class="footer-description-box">
+                <a href="#" class="footer-description-box__button">See More</a>
+                <a href="#" class="footer-description-box__button">Submit</a>
+              </div>
+              <h5>MIGUEL ALONSO</h5>
+              <p>&#169; Copyright <time>2018-2019</time></p>
+              <p>All rights reserved. Powered by Malbom studio</p>
             </div>
           </section>
 
