added dropdown-submenu to sideBar

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <ul class="navbar-list">
             <li><a href="" class="navbar-list__link">About me</a></li>
             <li><a href="#contact" class="navbar-list__link">Contact</a></li>
-            <li><a href="" class="navbar-list__link">Projects</a></li>
+            <li><a href="#projects" class="navbar-list__link">Projects</a></li>
           </ul>
         </div>
       </div>
@@ -39,11 +39,18 @@
       <div class="side-img-box">
         <img src="img/miguel.png" alt="" class="side-img-contact">
       </div>
-      <ul>
-        <li><a class="side-bar__link">EXPERIENCE</a></li>
-        <li><a class="side-bar__link">EDUCATION</a></li>
-        <li><a class="side-bar__link">INTERESTS</a></li>
-        <li><a class="side-bar__link">SOCIAL MEDIA</a></li>
+      <ul class="side-bar__menu">
+        <li class="side-bar__item"><a class="side-bar__link">EXPERIENCE</a></li>
+        <li class="side-bar__item"><a class="side-bar__link">EDUCATION</a></li>
+        <li class="side-bar__item"><a class="side-bar__link">INTERESTS</a></li>
+        <li class="side-bar__item sider-bar__submenu"><a class="side-bar__link sider-bar__submenuButton">LANGUAGES</a>
+            <ul class="sider-bar_submenu-list">
+              <li><a>Spanish (Nativo)</a></li>
+              <li><a>English</a></li>
+              <li><a>French</a></li>
+            </ul>
+        </li>
+        <li class="side-bar__item"><a class="side-bar__link">SOCIAL MEDIA</a></li>
       </ul>
     </div>
 
@@ -99,7 +106,7 @@
             <ul class="workflow-list">
               <li>Mobile-First, Responsive Design Focus</li>
               <li>Cross Functional Teams (Creative to Development)</li>
-              <li>Agile Development Approach</li>
+              <li id="projects">Agile Development Approach</li>
             </ul>
           </section>
 
@@ -107,7 +114,7 @@
 
           <!-- ################### PORTFOLIO ################### -->
 
-          <section class="projects">
+          <section  class="projects">
             <div class="projects-title">
               <h2>PROJECTS</h2>
             </div>
@@ -120,6 +127,7 @@
                   <a href="https://codesandbox.io/embed/7k81vw6pq0?fontsize=14" target="_blank">
                     <img src="img/vue-music-app.png" alt="" class="project-img">
                   <div class="project-img-overlay">Vue-Music App</div>
+                  <div class="img-bang"><h6><tim>March - 2019</tim></h6></div>
                   </a>
                 </div>
                 <div class="project-description-overlay">
@@ -145,6 +153,7 @@
                   <a href="https://codesandbox.io/embed/4051wopon9?fontsize=14" target="_blank">
                     <img src="img/todo-list-vue.png" alt="" class="project-img">
                     <div class="project-img-overlay">Todo List</div>
+                    <div class="img-bang"><h6><tim>January - 2019</tim></h6></div>
                   </a>
                 </div>
                 <h4>Skills :</h4>
@@ -167,6 +176,7 @@
                   <a href="https://malbonm07.github.io/landing-page/" target="_blank">
                     <img src="img/landing-page.png" alt="" class="project-img">
                     <div class="project-img-overlay">Freecodecamp Landing Page</div>
+                    <div class="img-bang"><h6><tim>December - 2018</tim></h6></div>
                   </a>
                 </div>
                 <h4>Skills :</h4>
